fixed bug with footer overlapping main content

--- a/client/stylesheets/layouts/layout.less
+++ b/client/stylesheets/layouts/layout.less
@@ -33,6 +33,7 @@ html {
     // layout
 
     .ui.layout {
+      position: relative;
       min-height: 100%;
       overflow: hidden;
 
